prod/web/deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: web
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  replicas: 3
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: index.docker.io/brbik/kunde100-web:sha-2341e488d00d50f588c3169e8ca89928dc384c9e
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "10Mi"
          limits:
            memory: "64Mi"
      imagePullSecrets:
      - name: regcred
        
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: web
spec:
  selector:
    app: web
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  type: LoadBalancer
